@@ -1,4 +1,8 @@
 
+2006-05-22 Bernhard Kraft  <kraftb@kraftb.at>
+
+	* Fix a problem of the EM: "No file uploaded!" when retrying install after a failed dependency check
+
 2006-05-22  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
 	* Corrected error message for config.baseURL=1
